--- a/aqua/qt5/Portfile
+++ b/aqua/qt5/Portfile
@@ -214,7 +214,7 @@ array set modules {
         {"Qt Core" "Qt GUI" "Qt Network" "Qt SQL" "Qt Test" "Qt Widgets" "Qt Concurrent" "Qt D-Bus" "Qt OpenGL" "Qt Platform Headers" "Qt Print Support" "Qt XML"}
         ""
         "variant overrides: "
-        "revision 0"
+        "revision 1"
         "License: "
     }
     qtcharts {
@@ -1107,6 +1107,7 @@ foreach {module module_info} [array get modules] {
                 CVE-2023-37369-qtbase-5.15.diff
                 CVE-2023-38197-qtbase-5.15.diff
                 CVE-2023-51714-qtbase-5.15.diff
+                CVE-2024-25580-qtbase-5.15.diff
             }
 
             # see https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=270715
