qt6-qtbase: apply security patches
Also avoid fuzz in existing patch

--- a/aqua/qt6/Portfile
+++ b/aqua/qt6/Portfile
@@ -106,7 +106,7 @@ array set modules {
          "Qt OpenGL" "Qt Platform Headers" "Qt Print Support" "Qt XML"}
         ""
         "variant overrides: "
-        "revision 5"
+        "revision 6"
         "License: "
     }
     qtsvg {
@@ -1035,6 +1035,16 @@ subport ${name}-qtpositioning {
 }
 
 if { ${subport} eq "${name}-qtbase" || ${subport} eq "${name}-qtbase-docs" } {
+    patchfiles-append {*}{
+                                    CVE-2023-32762-qtbase.diff
+                                    CVE-2023-32763-qtbase.diff
+                                    CVE-2023-33285-qtbase.diff
+                                    CVE-2023-37369-qtbase.diff
+                                    CVE-2023-38197-qtbase.diff
+                                    CVE-2023-51714-qtbase.diff
+                                    CVE-2024-25580-qtbase.diff
+    }
+
     # allow building with macOS 10.14 SDK
     # see https://trac.macports.org/ticket/64345
     patchfiles-append               patch-qtbase-macos_10.14_sdk.diff
